Finished implementing preferences
