# service/src/main/java/io/nuvalence/user/management/api/service/repository/UserPreferencesRepository.java
@@ -6,7 +6,7 @@ import org.springframework.data.jpa.repository.Query;
 import org.springframework.data.repository.query.Param;
 import org.springframework.stereotype.Repository;
 
-import java.util.Optional;
+import java.util.List;
 import java.util.UUID;
 
 /**
@@ -15,11 +15,12 @@ import java.util.UUID;
 @Repository
 public interface UserPreferencesRepository extends JpaRepository<UserPreferenceEntity, UUID> {
 
-    @Query(value = "select * from user_preference where user_id = :userId", nativeQuery = true)
-    Optional<UserPreferenceEntity> findPreferencesByUserId(@Param("userId") UUID userId);
+    @Query(value = "select * from user_preference where user_id = :userId and application_id is null",
+            nativeQuery = true)
+    List<UserPreferenceEntity> findPreferencesByUserId(@Param("userId") UUID userId);
 
     @Query(value = "select * from user_preference where user_id = :userId and application_id = :appId", nativeQuery =
             true)
-    Optional<UserPreferenceEntity> findApplicationPreferencesByUserId(@Param("userId") UUID userId,
-                                                                      @Param("appId") UUID appId);
+    List<UserPreferenceEntity> findUserApplicationPreferences(@Param("userId") UUID userId,
+                                                              @Param("appId") UUID appId);
 }
