# swagger.yaml
@@ -165,7 +165,7 @@ paths:
       tags:
         - "user"
       summary: "Get preferences by user id"
-      operationId: "getPreferencesById"
+      operationId: "getUserPreferences"
       parameters:
         - name: "id"
           in: "path"
@@ -212,7 +212,7 @@ paths:
       tags:
         - "user"
       summary: "Get supported preferences for an application by user id"
-      operationId: "getSupportedPreferencesById"
+      operationId: "getUserApplicationPreferences"
       parameters:
         - name: "id"
           in: "path"
@@ -367,13 +367,13 @@ paths:
       parameters:
         - name: body
           in: body
-          description: "Role creation request object"
+          description: " role object"
           required: true
           schema:
-            $ref: "#/definitions/RoleCreationRequest"
+            $ref: "#/definitions/RoleDTO"
       responses:
         "201":
-          description: "Successful operation"
+          description: "successful operation"
         "400":
           description: "Invalid request body"
         "401":
@@ -388,12 +388,12 @@ paths:
       parameters:
         - name: "resource"
           in: "query"
-          description: "Name of the resource"
+          description: "Name of the resource "
           required: false
           type: "string"
       responses:
         "200":
-          description: "Successful operation"
+          description: "successful operation"
           schema:
             $ref: "#/definitions/AllRoles"
         "401":
@@ -408,18 +408,18 @@ paths:
       parameters:
         - name: "id"
           in: "path"
-          description: "Id of role to delete"
+          description: "Id of role to delete "
           required: true
           type: "string"
           format: uuid
         - name: "resource"
           in: "query"
-          description: "Name of the resource"
+          description: "Name of the resource "
           required: false
           type: "string"
       responses:
         "200":
-          description: "Successful operation"
+          description: "successful operation"
         "401":
           description: "You are unauthorized to make this request"
         "404":
@@ -432,18 +432,18 @@ paths:
       parameters:
         - name: "id"
           in: "path"
-          description: "Id of role to retrieve users for"
+          description: "Id of role to retrieve users for "
           required: true
           type: "string"
           format: uuid
         - name: "resource"
           in: "query"
-          description: "Name of the resource"
+          description: "Name of the resource "
           required: false
           type: "string"
       responses:
         "200":
-          description: "Successful operation"
+          description: "successful operation"
           schema:
             $ref: '#/definitions/AllUsers'
         "401":
@@ -462,15 +462,20 @@ paths:
           required: true
           type: "string"
           format: uuid
+        - name: "resource"
+          in: "query"
+          description: "Name of the resource "
+          required: false
+          type: "string"
         - name: body
           in: body
-          description: "Role update request object"
+          description: "role object"
           required: true
           schema:
-            $ref: "#/definitions/RoleUpdateRequest"
+            $ref: "#/definitions/RoleDTO"
       responses:
         "201":
-          description: "Successful operation"
+          description: "successful operation"
         "401":
           description: "You are unauthorized to make this request"
         "404":
@@ -910,45 +915,6 @@ definitions:
         type: array
         items:
           type: string
-  RoleApplicationDTO:
-    type: object
-    required:
-      - applicationId
-      - permissions
-    properties:
-      applicationId:
-        type: string
-        format: uuid
-      permissions:
-        type: array
-        items:
-          type: string
-  RoleCreationRequest:
-    type: object
-    required:
-      - roleName
-      - displayName
-      - applications
-    properties:
-      roleName:
-        type: string
-      displayName:
-        type: string
-      applications:
-        type: array
-        items:
-          $ref: '#/definitions/RoleApplicationDTO'
-  RoleUpdateRequest:
-    type: object
-    properties:
-      roleName:
-        type: string
-      displayName:
-        type: string
-      applications:
-        type: array
-        items:
-          $ref: '#/definitions/RoleApplicationDTO'
   UserRoleDTO:
     type: object
     required:
@@ -964,19 +930,14 @@ definitions:
   UserPreferenceDTO:
     type: object
     properties:
-      id:
-        type: string
-        format: uuid
       userId:
         type: string
         format: uuid
-      userPreferenceTypeId:
+      applicationId:
         type: string
         format: uuid
-      userPreferenceOptionId:
-        type: string
-        format: uuid
-      applicationId:        
+    additionalProperties:
+      type: string
   PermissionDTO:
     type: object
     required:
@@ -1087,6 +1048,10 @@ definitions:
       name:
         type: string
         example: "language"
+      options:
+        type: array
+        items:
+          type: string
   UserPreferenceOptionDTO:
     type: object
     properties:
